--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
 development:
-  password: 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
-  theme_id: "129336279299"
+  password: 
+  theme_id: ""
   store: https://vicci-eyewear.myshopify.com
